--- a/src/app/components/bookings-tab/bookings-tab.component.html
+++ b/src/app/components/bookings-tab/bookings-tab.component.html
@@ -4,8 +4,23 @@
     <div class="filters">
       <div class="filter-group">
         <label>Date:</label>
-        <input type="date" [(ngModel)]="selectedDate" (change)="onFilterChange()" class="form-control">
-        <button class="btn btn-secondary" (click)="setToday()" style="margin-top: 5px;">Today</button>
+        <div class="date-input-group">
+          <select [(ngModel)]="selectedDay" (change)="onDateChange()" class="form-control date-select">
+            <option [value]="null">Day</option>
+            <option *ngFor="let day of days" [value]="day">{{ day }}</option>
+          </select>
+          <select [(ngModel)]="selectedMonth" (change)="onDateChange()" class="form-control date-select">
+            <option [value]="null">Month</option>
+            <option *ngFor="let month of months; let i = index" [value]="i + 1">{{ month }}</option>
+          </select>
+          <select [(ngModel)]="selectedYear" (change)="onDateChange()" class="form-control date-select">
+            <option [value]="null">Year</option>
+            <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+          </select>
+        </div>
+        <button class="btn btn-secondary btn-today" (click)="setToday()" style="margin-top: 5px;">
+          <i class="fa fa-calendar-day"></i> Today
+        </button>
       </div>
       <div class="filter-group">
         <label>Status:</label>
