--- a/src/app/components/queue-list/queue-list.component.css
+++ b/src/app/components/queue-list/queue-list.component.css
@@ -31,7 +31,7 @@
 
 .queue-list-table th {
   padding: 12px 16px;
-  text-align: left;
+  text-align: center;
   font-weight: 600;
   color: #495057;
   border-bottom: 2px solid #dee2e6;
